# Whitecoin-core

./: .gitignore  CMakeLists.txt  LICENSE  README.md  docker-compose.yml  genesis.json  testnet_genesis.json
libraries/crosschain_deps/blocklink_crosschain_privatekey/: CMakeLists.txt  README  git-address.txt  run_cmake_x64.bat
libraries/crosschain_deps/blocklink_crosschain_privatekey/secp256k1/include/: secp256k1.h  secp256k1_recovery.h
libraries/crosschain_deps/blocklink_crosschain_privatekey/secp256k1/src/: secp256k1.c
libraries/crosschain_deps/eth_crosschain_privatekey/eth_sign/: CMakeLists.txt  CMakeLists.txt.old
libraries/crosschain_deps/eth_crosschain_privatekey/eth_sign/cryptopp/: cryptlib.vcxproj  cryptlib.vcxproj.filters  makefile
libraries/crosschain_deps/eth_crosschain_privatekey/eth_sign/libdevcore/: CommonData.cpp  CommonData.h  CommonIO.cpp  CommonIO.h  DevCoreCommon.cpp  DevCoreCommon.h  DevCoreCommonJS.cpp  FileSystem.cpp  MemoryDB.cpp  MemoryDB.h  OverlayDB.cpp  OverlayDB.h  TransientDirectory.cpp  TrieCommon.h  TrieDB.h
libraries/crosschain_deps/eth_crosschain_privatekey/eth_sign/libdevcrypto/: AES.h  CryptoPP.cpp  CryptoPP.h  DevCryptoCommon.cpp  DevCryptoCommon.h  Hash.cpp
libraries/crosschain_deps/eth_crosschain_privatekey/eth_sign/libethcore/: BasicAuthority.cpp  BlockHeader.cpp  BlockHeader.h  ChainOperationParams.cpp  ChainOperationParams.h  Common.cpp  Common.h  CommonJS.cpp  CommonJS.h  EVMSchedule.h  Precompiled.cpp  TransactionBase.cpp  TransactionBase.h
libraries/crosschain_deps/eth_crosschain_privatekey/eth_sign/secp256k1/: cmake_install.cmake
libraries/uvm/: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  build_deps.sh  build_in_docker.sh  build_prepare.sh  docker-compose.yml  run_tests_in_docker.sh  uvm.sln  uvm.vcxproj
libraries/uvm/include/cbor_diff/: cbor_diff.h  cbor_diff_exceptions.h  cbor_diff_tests.h  helper.h
libraries/uvm/include/cborcpp/: cbor_object.h  decoder.h  encoder.h  input.h  output.h
libraries/uvm/include/native_contract/: native_contract_api.h  native_exchange_contract.h  native_token_contract.h  native_uniswap_contract.h
libraries/uvm/include/safenumber/: safenumber.h
libraries/uvm/include/uvm/: exceptions.h  json_reader.h  lauxlib.h  lcode.h  ldebug.h  lfunc.h  lgc.h  lhashmap.h  llex.h  llimits.h  lnetlib.h  lobject.h  lopcodes.h  lparser.h  lstate.h  lstring.h  ltable.h  ltm.h  lua.h  luaconf.h  lualib.h  lundump.h  lvm.h  uvm_api.h  uvm_lib.h  uvm_lutil.h  uvm_storage.h
libraries/uvm/simplechain/: simplechain.vcxproj
libraries/uvm/simplechain/include/: client_http.hpp  server_http.hpp  status_code.hpp  utility.hpp
libraries/uvm/simplechain/include/simplechain/: address_helper.h  asset.h  block.h  blockchain.h  chain_rpc.h  chainparams.h  config.h  contract.h  contract_engine.h  contract_engine_builder.h  contract_entry.h  contract_evaluate.h  contract_helper.h  contract_object.h  debugger.h  evaluate_result.h  evaluate_state.h  evaluator.h  native_contract.h  native_contract_tests.h  operation.h  (+10 more)
libraries/uvm/simplechain/src/: Keccak.cpp
libraries/uvm/src/cbor_diff/: cbor_diff.cpp  cbor_diff_tests.cpp  helper.cpp
libraries/uvm/src/cborcpp/: cbor_object.cpp  decoder.cpp  encoder.cpp  input.cpp  output.cpp
libraries/uvm/src/native_contract/: native_exchange_contract.cpp  native_token_contract.cpp  native_uniswap_contract.cpp
libraries/uvm/src/safenumber/: safenumber.cpp
libraries/uvm/src/uvm/: json_reader.cpp  lapi.cpp  lauxlib.cpp  lcode.cpp  lcorolib.cpp  ldebug.cpp  ldo.cpp  ldump.cpp  lfunc.cpp  lgc.cpp  lhashmap.cpp  lhttplib.cpp  linit.cpp  ljsonlib.cpp  ljsonlib2.cpp  llex.cpp  lmathlib.cpp  lmem.cpp  loadlib.cpp  lobject.cpp  lopcodes.cpp  lparser.cpp  lsafemathlib.cpp  lstate.cpp  lstring.cpp  lstrlib.cpp  ltable.cpp  ltimelib.cpp  ltm.cpp  lundump.cpp  lvm.cpp  uvm_api_types.cpp  uvm_lib.cpp  uvm_lutil.cpp  uvm_state_scope.cpp  uvm_storage.cpp  uvm_tokenparser.cpp
libraries/uvm/test/: .gitignore  README.md  change_other_contract_property.lua  change_other_contract_property.lua.out  install_deps.sh  load_simple_contract.lua  load_simple_contract.lua.out  result.out.test  run_tests.sh  test_many_string_operations.lua  test_many_string_operations.lua.out  test_safemath.lua  test_safemath.lua.out  uvm_ass
libraries/uvm/test/test_contracts/: .gitignore  change_other_contract_property_contract.lua  newtoken.gpc  plasma_root_chain.lua  sparse_merkle_tree.lua  test_be_delegate_called.lua  test_be_delegate_called.lua.gpc  test_delegate_call.lua  test_delegate_call.lua.gpc  test_many_objects.lua  test_many_objects.lua.gpc  test_number_storage.lua  test_number_storage.lua.gpc  test_simple_storage_change.lua  token.gpc  token_caller.lua  validator_manager_contract.lua
libraries/uvm/test/tests_lua/: .gitignore  test1.lua  test_c_function.lua  test_c_module_inject.lua  test_cbor.lua  test_contract_tostring.lua  test_crypto_primitives.lua  test_error.lua  test_exit_contract.lua  test_fastmap.lua  test_for_loop_goto.lua  test_global_apis.lua  test_gmatch.lua  test_import_not_found.lua  test_invalid_bytecode_header.bytecode  test_invalid_upvalue.uvms  test_json.lua  test_load_contract.lua  test_math.lua  test_max_amount_localvars.lua  test_signature_recover.lua  test_stop_vm.lua  test_string_operators.lua  test_time.lua  test_too_many_localvars.lua  test_types.lua  test_upval.lua
libraries/uvm/test/tests_typed/: bin_and_un_op_type.lua  test_call_contract_it_self.glua  test_define_global_in_contract_loader.lua  test_emit_events_valid.glua  test_pairs.glua  test_storage.glua  test_table_module.glua  test_typed_exit_contract.glua
libraries/uvm/uvm_single/: Keccak.cpp  main.cpp  storage.cpp  uvm_api.demo.cpp  uvm_api.demo.h  uvm_single.vcxproj
libraries/uvm/uvm_single/uvm_modules/: uvm_contract_define_global_in_contract  uvm_contract_define_global_in_contract.lua  uvm_contract_simple_contract.lua
libraries/uvm/vmgc/: .gitignore  CMakeLists.txt  README.md  run_cmake.bat  setenv.bat.demo
libraries/uvm/vmgc/src/: gcstate.cpp  vmgc.cpp
libraries/uvm/vmgc/test/: test_runner.cpp
(+316 files in other folders)
